...
                        primary = false,
                        onClick = { showLoadGame = true }
                    )

                    if (services.isDebugEnabled) {
                        AuthenticTitleButton(
                            text = "Debug Scenarios",
                            primary = false,
                            onClick = { showDebugScenarios = true }
                        )
                    }

                    AuthenticTitleButton(
...
